# yantra-gandharva

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
cli/: main.py
data/examples/: example_output.musicxml  furno_example.json  furno_example_realized.json  lead_sheet_example.json
docs/: howto-partimento.md  roadmap.md
src/cli/: commands.py  handlers.py  main.py
src/cli/commands/: __init__.py  core.py  firebase.py  jazz.py  partimento.py
src/cli/handlers/: __init__.py  core.py  firebase.py  jazz.py  partimento.py
src/generate/: figured_bass.py  jazz_lead_sheet.py  partimento.py
src/generate/partimento/: export.py
src/genres/jazz/: prompts.py
src/genres/partimento/: prompts.py
src/lib/: firebase_utils.py
src/lib/analysis/: linting.py
src/lib/utils/: chain_utils.py  json_utils.py  llm_utils.py  music_utils.py  musicxml_utils.py  playback_utils.py
src/llm/: client.py  generate_figured_bass.py  generate_jazz.py  generate_score.py
src/llm/prompts/: figured_bass.py  jazz.py  partimento.py  review.py
src/llm/tasks/: figured_bass.py  generate_jazz.py  generate_partimento.py  generate_score.py  realize_figured_bass.py
src/utils/: json_utils.py  metadata_utils.py  musicxml_tools.py
src/yantra_gandharva.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/generate/: test_figured_bass.py  test_jazz_lead_sheet.py
tests/llm/: test_generate_score.py
tests/utils/: test_chain_utils.py  test_musicxml_tools.py  test_musicxml_utils.py
(+12 files in other folders)
